--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2.1
 orbs:
   gradle: circleci/gradle@1.0.10
+  win: circleci/windows@5.0
 _defaults: &defaults
   working_directory: ~/code
   environment:
@@ -79,6 +80,13 @@ jobs:
           key: >-
             gradle-{{ checksum "/tmp/gradle_cache_seed" }}-{{ checksum
             ".circleci/config.yml" }}-macos
+  build-windows:
+    executor: win/default
+    steps:
+      - checkout
+      # TODO: restore cache on windows
+      - run: gradlew.bat build
+      # TODO: save cache on windows
 workflows:
   version: 2
   build:
@@ -88,6 +96,10 @@ workflows:
             branches:
               ignore: main
       - build-macos:
+          filters:
+            branches:
+              ignore: main
+      - build-windows:
           filters:
             branches:
               ignore: main
