--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,7 @@ jobs:
     steps:
       - checkout
       # TODO: restore cache on windows
-      - run: gradlew.bat build
+      - run: Start-Process -FilePath "gradlew.bat" -ArgumentList "build"
       # TODO: save cache on windows
 workflows:
   version: 2
