Upgrade the resource for a faster build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,6 +82,7 @@ jobs:
             ".circleci/config.yml" }}-macos
   build-windows:
     executor: win/default
+    size: 2xlarge
     steps:
       - checkout
       # TODO: restore cache on windows
