Fix windows executor syntax

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,8 +81,9 @@ jobs:
             gradle-{{ checksum "/tmp/gradle_cache_seed" }}-{{ checksum
             ".circleci/config.yml" }}-macos
   build-windows:
-    executor: win/default
-    size: 2xlarge
+    executor:
+        name: win/default
+        size: 2xlarge
     steps:
       - checkout
       # TODO: restore cache on windows
