--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,7 @@ _gradle_checksum: &gradle_checksum
 _gradle_checksum_windows: &gradle_checksum_windows
   name: Generate Cache Checksum (Windows)
   command: >-
-    find . -name 'build.gradle' | sort | xargs Get-FileHash -Path | awk '{print
-    $1}' > /tmp/gradle_cache_seed
+    Get-ChildItem -Filter *.gradle* -Recurse | Get-FileHash | Out-File -FilePath "$env:TEMP\gradle_cache_seed"
 jobs:
   build-linux:
     docker:
