--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,7 +97,7 @@ jobs:
             gradle-{{ checksum ".circleci/gradle_cache_seed" }}-{{ checksum
             ".circleci/config.yml" }}-windows
       - run:
-          command: ./gradlew build
+          command: ./gradlew --no-daemon build
           shell: bash.exe
       - save_cache:
           paths:
